add a note to tell if pocketsphinx.js is ready

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Alexa on Web</h1>
-    <p>Try asking thing like: "Aexa, what time is it?" or "Alexa, tell me the news".</p>
+    <p>Login and wait until keyword spotting is ready (a log will notify you). It takes time to download 4.11 MB pocketsphinx.js.</p>
+    <p>Then try asking thing like: "Aexa, what time is it?" or "Alexa, tell me the news".</p>
     <button id="login">Login</button>
     <button id="logout" disabled>Logout</button>
     <button id="stopAudio" disabled>Stop audio</button>
